Move passive scan jobs to `pscan`
Move the passive scan related jobs to the `pscan` add-on.
Update existing add-ons to use the new jobs and result data where
possible, some add-ons can't yet depend on it.
Change `pscanrules` to depend on `pscan` to have the passive scan jobs
by default, at least until the next main release.

Signed-off-by: thc202 <thc202@gmail.com>